maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:18: error: type mismatch;
 found   : Unit
 required: Boolean
    if(!nordActif && isDirectionFree(Direction.NORD) && sommeAngle!=0){
                                    ^Escaper:59: warning: enclosing method isDirectionFree has result type Unit: return value discarded
  return !estFaceMur()
  ^